# MITK

./: .gitignore
Applications/: CMakeLists.txt
Examples/Plugins/org.mitk.example.gui.opencv/: files.cmake
Modules/Core/src/IO/: mitkIOUtil.cpp
Modules/IGT/Rendering/: mitkNavigationDataObjectVisualizationFilter.cpp
Modules/IGT/TrackingDevices/: mitkPolhemusInterface.cpp
Modules/IGTUI/: CMakeLists.txt  files.cmake
Modules/IGTUI/Qmitk/: QmitkAutomaticFiducialmarkerRegistrationWidget.cpp  QmitkAutomaticFiducialmarkerRegistrationWidget.h  QmitkAutomaticFiducialmarkerRegistrationWidget.ui
Modules/QtWidgetsExt/src/: QmitkVideoBackground.cpp
Plugins/: PluginList.cmake
Plugins/org.mitk.example.gui.opencv/: plugin.xml
Plugins/org.mitk.gui.qt.ARStrokeTreatment/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.gui.qt.igtregistration/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.gui.qt.splinevisualisationplugin/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.gui.qt.splinevisualisationplugin/archive/: SplineVisualisationTPMeasurments.h  SplineVisualisationTPMeasurmentsControls.ui  SplineVisualisationTPMesurements.txt  neu 2.txt  old_CMAKE.txt
Plugins/org.mitk.gui.qt.splinevisualisationplugin/resources/: All Error Values (Combined Evaluation).csv  Closest GT Point values.csv
Plugins/org.mitk.gui.qt.thrombus/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
Plugins/org.mitk.gui.qt.thrombus/resources/: icon.xpm
(+52 files in other folders)
